--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
     "build": "nuxt build",
     "generate": "nuxt generate",
     "start": "nuxt start"
+  },
+  "devDependencies": {
+    "@nuxt/types": "^2.14.4",
+    "@nuxt/typescript-build": "^2.0.2"
   }
 }
