--- a/package.json
+++ b/package.json
@@ -8,16 +8,22 @@
     "url": "https://bolaji.de"
   },
   "dependencies": {
-    "nuxt": "^2.14.4"
+    "dotenv": "^8.2.0",
+    "nuxt": "^2.14.4",
+    "nuxt-property-decorator": "^2.7.2"
   },
   "scripts": {
     "dev": "nuxt",
     "build": "nuxt build",
     "generate": "nuxt generate",
-    "start": "nuxt start"
+    "start": "nuxt start",
+    "lint": "eslint --ext .ts,.js,.vue ."
   },
   "devDependencies": {
     "@nuxt/types": "^2.14.4",
-    "@nuxt/typescript-build": "^2.0.2"
+    "@nuxt/typescript-build": "^2.0.2",
+    "@nuxtjs/eslint-config-typescript": "^3.0.0",
+    "@types/node": "^14.6.1",
+    "eslint": "^7.7.0"
   }
 }
